Issue #2947701: Added [equal-height] vartheme LESS/CSS class in [vartheme/equal-height] as a custom component library to help equal heights of columns in bootstrap rows

--- a/VARTHEME_SUBTHEME/VARTHEME_SUBTHEME.libraries.yml
+++ b/VARTHEME_SUBTHEME/VARTHEME_SUBTHEME.libraries.yml
@@ -106,6 +106,12 @@ bootstrap-scripts:
 #    layout:
 #      css/layout/edge2edge.layout.css: {}
 
+# Vartheme Material Equal height layout library.
+#equal-height:
+#  css:
+#    layout:
+#      css/layout/equal-height.layout.css: {}
+
 # Vartheme Bootstrap Callouts component library.
 #bs-callouts:
 #  css:
