--- a/vartheme.libraries.yml
+++ b/vartheme.libraries.yml
@@ -92,6 +92,12 @@ edge2edge:
   css:
     layout:
       css/layout/edge2edge.layout.css: {}
+      
+# Vartheme Equal height layout library.
+equal-height:
+  css:
+    layout:
+      css/layout/equal-height.layout.css: {}
 
 # Vartheme Bootstrap Callouts component library.
 bs-callouts:
