Issue #2947698: Added [Card] Vartheme bootstrap card, as a custom component library to help style [VMI] vertical media teasers, and text teasers

--- a/VARTHEME_SUBTHEME/VARTHEME_SUBTHEME.libraries.yml
+++ b/VARTHEME_SUBTHEME/VARTHEME_SUBTHEME.libraries.yml
@@ -118,6 +118,12 @@ bootstrap-scripts:
 #    component:
 #      css/component/bs-callouts.component.css: {}
 
+# Vartheme bootstrap card component.
+#card:
+#  css:
+#    component:
+#      css/component/card.component.css: {}
+
 # Vartheme Outside in component library.
 #outside-in:
 #  css:
