Issue #2947699: Added [vb-tags] vartheme bootstrap tags, as a custom component library to help style the field_tags in varbase

--- a/vartheme.info.yml
+++ b/vartheme.info.yml
@@ -45,6 +45,7 @@ libraries:
 # Vartheme custom theme, layout, and component libraries.
   - vartheme/navbar-admin
   - vartheme/bs-callouts
+  - vartheme/vb-tags
   - vartheme/card
   - vartheme/outside-in
   - vartheme/edge2edge
