--- a/config/optional/block.block.vartheme_views_block__varbase_heroslider_media_varbase_heroslider_media.yml
+++ b/config/optional/block.block.vartheme_views_block__varbase_heroslider_media_varbase_heroslider_media.yml
@@ -7,6 +7,7 @@ dependencies:
     - block_class
     - system
     - views
+    - varbase_heroslider_media
   theme:
     - vartheme
 third_party_settings:
