--- a/vartheme.libraries.yml
+++ b/vartheme.libraries.yml
@@ -7,6 +7,8 @@ global-styles:
       css/theme/header.theme.css: {}
       css/theme/content.theme.css: {}
       css/theme/footer.theme.css: {}
+  dependencies:
+    - core/jquery
 
 # Vartheme global (RTL) styles library.
 global-styles-rtl:
@@ -17,24 +19,16 @@ global-styles-rtl:
       css/rtl/theme/header-rtl.theme.css: {}
       css/rtl/theme/content-rtl.theme.css: {}
       css/rtl/theme/footer-rtl.theme.css: {}
+  dependencies:
+    - core/jquery
 
 # Vartheme global scripts library.
 global-scripts:
   js:
     js/script.js: {}
-
-# Vartheme Varbase Bootstrap Paragraphs colors theme.
-vbp-colors:
-  css:
-    theme:
-      css/theme/vbp-colors.theme.css: {}
-
-# Vartheme better login theme.
-betterlogin:
-  css:
-    theme:
-      css/theme/betterlogin.theme.css: {}
-
+  dependencies:
+    - core/jquery
+    
 # Bootstrap global styles library.
 bootstrap-styles:
   css:
@@ -61,6 +55,63 @@ bootstrap-scripts:
     bootstrap/js/scrollspy.js: {}
     bootstrap/js/tab.js: {}
     bootstrap/js/transition.js: {}
+
+# Vartheme framework as which could be used to extend bootstrap/framework
+#          vartheme/framework = vartheme/bootstrap-styles
+#                             + vartheme/global-styles
+#                             + vartheme/bootstrap-scripts
+#                             + vartheme/global-scripts           
+framework:
+  css:
+    base:
+      css/base/bootstrap.base.css: {}
+      css/base/vartheme.base.css: {}
+    theme:
+      css/theme/header.theme.css: {}
+      css/theme/content.theme.css: {}
+      css/theme/footer.theme.css: {}
+  js:
+    bootstrap/js/affix.js: {}
+    bootstrap/js/alert.js: {}
+    bootstrap/js/button.js: {}
+    bootstrap/js/carousel.js: {}
+    bootstrap/js/collapse.js: {}
+    bootstrap/js/dropdown.js: {}
+    bootstrap/js/modal.js: {}
+    bootstrap/js/tooltip.js: {}
+    bootstrap/js/popover.js: {}
+    bootstrap/js/scrollspy.js: {}
+    bootstrap/js/tab.js: {}
+    bootstrap/js/transition.js: {}
+    js/script.js: {}
+  dependencies:
+    - core/jquery
+
+# Vartheme framework RTL as which could be used to extend bootstrap/framework
+#          vartheme/framework-rtl = vartheme/global-styles-rtl
+framework-rtl:
+  css:
+    base:
+      css/rtl/base/bootstrap-rtl.base.css: {}
+      css/rtl/base/vartheme-rtl.base.css: {}
+    theme:
+      css/rtl/theme/header-rtl.theme.css: {}
+      css/rtl/theme/content-rtl.theme.css: {}
+      css/rtl/theme/footer-rtl.theme.css: {}
+  dependencies:
+    - core/jquery
+
+# Vartheme Varbase Bootstrap Paragraphs colors theme.
+vbp-colors:
+  css:
+    theme:
+      css/theme/vbp-colors.theme.css: {}
+
+# Vartheme better login theme.
+betterlogin:
+  css:
+    theme:
+      css/theme/betterlogin.theme.css: {}
 
 # ------------------------------------------------------------------------------
 # Vartheme custom theme, layout, and components.
