--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "composer/installers": "^1.5.0",
     "oomphinc/composer-installers-extender": "^1.1.2",
     "cweagans/composer-patches": "^1.6.4",
-    "drupal/drupal-library-installer-plugin": "^0.3"
+    "drupal/drupal-library-installer-plugin": "^0.3",
+    "drupal/bootstrap": "^3.12"
   },
   "extra": {
     "branch-alias": {
