Issue #3026046: Add styling template for [Varbase Media Hero Slider] to VARTHEME_SUBTHEM to let themers change Custom Varbase Hero slider media variables

--- a/VARTHEME_SUBTHEME/VARTHEME_SUBTHEME.libraries.yml
+++ b/VARTHEME_SUBTHEME/VARTHEME_SUBTHEME.libraries.yml
@@ -269,3 +269,11 @@ vbp-colors:
 #  css:
 #    component:
 #      css/component/autocomplete.component.css: {}
+
+# Varbase hero slider media general styling.
+#varbase-heroslider-media:
+#  css:
+#    component:
+#      css/component/varbase-heroslider-media.component.css: { }
+#    theme:
+#      css/theme/varbase-heroslider-media.theme.css: { }
