--- a/VARTHEME_SUBTHEME/VARTHEME_SUBTHEME.starterkit.yml
+++ b/VARTHEME_SUBTHEME/VARTHEME_SUBTHEME.starterkit.yml
@@ -38,6 +38,9 @@ libraries:
 # VARTHEME_SUBTHEME Better Login theme.
 #  - VARTHEME_SUBTHEME/betterlogin
 
+# VARTHEME_SUBTHEME Varbase hero slider media general styling.
+#  - VARTHEME_SUBTHEME/varbase-heroslider-media
+
 # OPTIONALLY: You can choose to remove Vartheme base theme stylesheets and/or
 # Javascript files.
 libraries-override:
@@ -62,6 +65,7 @@ libraries-override:
   varbase_bootstrap_paragraphs/vbp-colors: VARTHEME_SUBTHEME/vbp-colors
   vartheme/vbp-colors: VARTHEME_SUBTHEME/vbp-colors
 #  vartheme/betterlogin: VARTHEME_SUBTHEME/betterlogin
+#  varbase_heroslider_media/general-styling: VARTHEME_SUBTHEME/varbase-heroslider-media
   
 # Uncomment lines to replace, exclude css and js files from vartheme.
 # You will need to copy less/css files from Vartheme to use theme for the
