Issue #3026247: Add [vartheme/spacing] bootstrap spacing library to support a back-ported spacing style borrowed from Bootstrap 4

--- a/VARTHEME_SUBTHEME/VARTHEME_SUBTHEME.libraries.yml
+++ b/VARTHEME_SUBTHEME/VARTHEME_SUBTHEME.libraries.yml
@@ -152,6 +152,12 @@ vbp-colors:
 #    layout:
 #      css/layout/equal-height.layout.css: {}
 
+# Vartheme Spacing layout library.
+#spacing:
+#  css:
+#    layout:
+#      css/layout/spacing.layout.css: {}
+
 # Vartheme Bootstrap Callouts component library.
 #bs-callouts:
 #  css:
