Issue #3113193: Drupal 9 Readiness for [Vartheme (Bootstrap 3 - LESS)] with Drupal coding standard and practice

--- a/vartheme.info.yml
+++ b/vartheme.info.yml
@@ -5,8 +5,9 @@ base theme: bootstrap
 name: Vartheme
 description: 'Base theme for Vardot standard websites. Based on Bootstrap 3 and less css'
 package: 'Varbase'
+project: vartheme
 version: 8.x-6.x-dev
-
+core_version_requirement: ^8 || ^9
 regions:
   navigation: 'Navigation'
   navigation_collapsible: 'Navigation (Collapsible)'
