--- a/composer.json
+++ b/composer.json
@@ -27,16 +27,13 @@
     }
   },
   "require": {
-    "composer/installers": "~1.0 || ~2.0",
-    "oomphinc/composer-installers-extender": "~1.0 || ~2.0",
+    "composer/installers": "~2",
+    "oomphinc/composer-installers-extender": "~2",
     "cweagans/composer-patches": "~1.0",
-    "drupal/core": "~8 || ~9",
+    "drupal/core": "~8 || ~9 || ~10",
     "drupal/bootstrap": "~3.0"
   },
   "extra": {
-    "branch-alias": {
-      "dev-8.x-6.x": "8.6.x-dev"
-    },
     "installer-types": [
       "bower-asset",
       "npm-asset"
